<resources>
    <string name="app_name">CookingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="email">E-Mail</string>
    <string name="pass">Password</string>
    <string name="passconf">Confirm Password</string>
    <string name="signup">Sign up</string>
    <string name="login_name">Login</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_passwconf">Please make sure you Entered the same password</string>
    <string name="err_msg_password_length">Password must have a Minimum of 6 Characters</string>
    <string name="change_email">Change email</string>
    <string name="change_pass">Change password</string>
    <string name="delete_acc">Delete account</string>
    <string name="sign_out">Sign out</string>
</resources>
