<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSignOutClicked"
            android:text="@string/sign_out" />

        <Button
            android:id="@+id/btn_delete_acc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDeleteAccountClicked"
            android:text="@string/delete_acc" />

        <Button
            android:id="@+id/btn_change_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangeEmailClicked"
            android:text="@string/change_email" />

        <Button
            android:id="@+id/btn_change_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onChangePasswordClicked"
            android:text="@string/change_pass" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>