<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.SignUpActivity">

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:onClick="onSignUpClicked"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@+id/txt_signup_passconf"
        app:layout_constraintStart_toStartOf="@+id/txt_signup_passconf"
        app:layout_constraintTop_toBottomOf="@+id/txt_signup_passconf" />

    <EditText
        android:id="@+id/txt_signup_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_signup_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txt_signup_email"
        app:layout_constraintStart_toStartOf="@+id/txt_signup_email"
        app:layout_constraintTop_toBottomOf="@+id/txt_signup_email" />

    <EditText
        android:id="@+id/txt_signup_passconf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/passconf"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/txt_signup_pass"
        app:layout_constraintStart_toStartOf="@+id/txt_signup_pass"
        app:layout_constraintTop_toBottomOf="@+id/txt_signup_pass" />

    <EditText
        android:id="@+id/txt_signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/txt_signup_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txt_signup_username"
        app:layout_constraintTop_toBottomOf="@+id/txt_signup_username" />

</android.support.constraint.ConstraintLayout>