<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="40dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_change_pass_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass">

            <EditText
                android:id="@+id/txt_change_password_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_change_pass_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/pass">

            <EditText
                android:id="@+id/txt_change_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:visibility="gone"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_change_pass_newconf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:hint="@string/passconf">

            <EditText
                android:id="@+id/txt_change_password_new_conf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:visibility="gone" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_update_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:onClick="onUpdatePasswordClicked"
            android:text="@string/change_pass" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>